--- a/site.conf
+++ b/site.conf
@@ -16,7 +16,7 @@ server {
                 return count
             end
 
-            local keys = ngx.shared.requests_counter:get_keys(global_keys_count);
+            local keys = ngx.shared.requests_counter:get_keys(0);
             local result = {};
             local server_count = 0;
             local key_count = 0;
@@ -72,7 +72,7 @@ server {
     #simple output of monitor data 
     location /monitor {
         content_by_lua '
-            local keys = ngx.shared.requests_counter:get_keys(10000)
+            local keys = ngx.shared.requests_counter:get_keys(0)
             for _, ip in pairs(keys) do
                 ngx.say(ip .. ";" .. ngx.shared.requests_counter:get(ip))
             end
